build and run successful but error with gold and trap entity being non-shared